# ERMS

./: CMakeLists.txt  README.md  active_patients.json  doctors.json  stats.json
include/: ERMS.hpp  Stats.hpp  Storage.hpp  Types.hpp
src/: ERMS.cpp  Stats.cpp  Storage.cpp  main.cpp
